5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1684_1101.log
== TEST (2019-04-22 18:54:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcão = input("Qual o tipo de instalação? (R/C/I): ")
print ("Entradas: ", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500):
	vr = (c * 0.44)
	print (vr)
elif (opcao == "R") and (c > 500):
	vr = (c * 0.65)
	print (vr)
elif (opcao == "C") and (c <= 1000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000):
	vr = (c * 0.60)
	print (vr)
elif (opcao == "I") and (c <= 5000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "I") and (c > 5000):
	vr = (c * 0.60)
	print (vr)
else:
	print ("Dados invalidos")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print ("Entradas: ", c ,"kWh e tipo", opcao )
NameError: name 'opcao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:55:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcão = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas: ", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500):
	vr = (c * 0.44)
	print (vr)
elif (opcao == "R") and (c > 500):
	vr = (c * 0.65)
	print (vr)
elif (opcao == "C") and (c <= 1000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000):
	vr = (c * 0.60)
	print (vr)
elif (opcao == "I") and (c <= 5000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "I") and (c > 5000):
	vr = (c * 0.60)
	print (vr)
else:
	print ("Dados invalidos")

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print ("Entradas: ", c ,"kWh e tipo", opcao )
NameError: name 'opcao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:56:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas: ", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500):
	vr = (c * 0.44)
	print (vr)
elif (opcao == "R") and (c > 500):
	vr = (c * 0.65)
	print (vr)
elif (opcao == "C") and (c <= 1000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000):
	vr = (c * 0.60)
	print (vr)
elif (opcao == "I") and (c <= 5000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "I") and (c > 5000):
	vr = (c * 0.60)
	print (vr)
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
-30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:56:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas: ", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500):
	vr = (c * 0.44)
	print (vr)
elif (opcao == "R") and (c > 500):
	vr = (c * 0.65)
	print (vr)
elif (opcao == "C") and (c <= 1000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000):
	vr = (c * 0.60)
	print (vr)
elif (opcao == "I") and (c <= 5000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "I") and (c > 5000):
	vr = (c * 0.60)
	print (vr)
else:
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.212665
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo I
-30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo R
621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:58:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas: ", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500):
	vr = (c * 0.44)
	print (vr)
elif (opcao == "R") and (c > 500):
	vr = (c * 0.65)
	print (vr)
elif (opcao == "C") and (c <= 1000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000):
	vr = (c * 0.60)
	print (vr)
elif (opcao == "I") and (c <= 5000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "I") and (c > 5000):
	vr = (c * 0.60)
	print (vr)
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas:  -56.0 kWh e tipo I
-30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:59:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500):
	vr = (c * 0.44)
	print (vr)
elif (opcao == "R") and (c > 500):
	vr = (c * 0.65)
	print (vr)
elif (opcao == "C") and (c <= 1000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000):
	vr = (c * 0.60)
	print (vr)
elif (opcao == "I") and (c <= 5000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "I") and (c > 5000):
	vr = (c * 0.60)
	print (vr)
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
-30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:59:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500):
	vr = (c * 0.44)
	print (vr)
elif (opcao == "R") and (c > 500):
	vr = (c * 0.65)
	print (vr)
elif (opcao == "C") and (c <= 1000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000):
	vr = (c * 0.60)
	print (vr)
elif (opcao == "I") and (c <= 5000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "I") and (c > 5000):
	vr = (c * 0.60)
	print (vr)
else:
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.126966
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
-30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:01:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500):
	vr = (c * 0.44)
	print (vr)
elif (opcao == "R") and (c > 500):
	vr = (c * 0.65)
	print (vr)
elif (opcao == "C") and (c <= 1000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000):
	vr = (c * 0.60)
	print (vr)
elif (opcao == "I") and (c <= 5000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "I") and (c > 5000):
	vr = (c * 0.60)
	print (vr)
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
-30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:04:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor Total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:04:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else:
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.18291
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor Total: R$  -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor Total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:04:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor Total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:06:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:06:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else:
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.126966
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor Total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:07:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500) and (c >= 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c >= 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c >= 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c >= 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c >= 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c >= 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:08:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500) and (c >= 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c >= 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c >= 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c >= 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c >= 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c >= 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else:
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.135168
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor Total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:08:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500) and (c >= 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c >= 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c >= 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c >= 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c >= 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c >= 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:09:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500) and (c >= 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c >= 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c >= 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c >= 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c >= 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c >= 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:10:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500) and (c >= 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c >= 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c >= 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c >= 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c >= 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c >= 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:10:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500) and (c >= 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c >= 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c >= 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c >= 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c >= 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c >= 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else:
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.147268
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor Total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:10:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c >= 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor Total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:11:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c >= 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor Total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:12:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else 
	print ("Dados invalidos")

	
-- ERROR:
File "XXXX", line 25
    else 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:12:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else: 
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor Total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:13:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else: 
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:14:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if ("opcao" == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else: 
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.214528
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor Total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:18:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else: 
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:19:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else: 
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.18953
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor Total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:19:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else: 
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:22:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
else ((c < 0) or (opcao != "R") and (opcao != "C") and (opcao != "I")):
	print ("Dados invalidos")

	
-- ERROR:
File "XXXX", line 25
    else ((c < 0) or (opcao != "R") and (opcao != "C") and (opcao != "I")):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:30:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif ((c < 0) or (opcao != "R") and (opcao != "C") and (opcao != "I")):
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:30:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif ((c < 0) or (opcao != "R") and (opcao != "C") and (opcao != "I")):
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.176616
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor Total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:31:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", vr)
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", vr)
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", vr)
elif ((c < 0) or (opcao != "R") and (opcao != "C") and (opcao != "I")):
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:33:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print (vr)
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
elif ((c < 0) or (opcao != "R") and (opcao != "C") and (opcao != "I")):
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:35:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
elif ((c < 0) or (opcao != "R") and (opcao != "C") and (opcao != "I")):
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:35:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", vr)
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
elif ((c < 0) or (opcao != "R") and (opcao != "C") and (opcao != "I")):
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.21844
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor Total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:37:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
elif ((c < 0) or (opcao != "R") and (opcao != "C") and (opcao != "I")):
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:37:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
elif ((c < 0) or (opcao != "R") and (opcao != "C") and (opcao != "I")):
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.213033
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor Total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:38:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:38:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
else:
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.148301
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor Total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:39:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$ ", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$ ", round(vr, 2))
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:40:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$", round(vr, 2))
else:
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.123233
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor Total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:40:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$", round(vr, 2))
else:
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.135786
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor Total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:40:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): "). upper()
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$", round(vr, 2))
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:41:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$", round(vr, 2))
else:
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.182782
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor Total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:37:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$", round(vr, 2))
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 21:37:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$", round(vr, 2))
else:
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.178538
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor Total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:38:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor Total: R$", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor Total: R$", round(vr, 2))
else:
	print ("Dados invalidos")

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 21:39:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("escreva o consumo em kWh: "))
opcao = input("Qual o tipo de instalacao? (R/C/I): ")
print ("Entradas:", c ,"kWh e tipo", opcao )
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("Valor total: R$", round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
	vr = (c * 0.65)
	print ("Valor total: R$", round(vr, 2))
elif (opcao == "C") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor total: R$", round(vr, 2))
elif (opcao == "C") and (c > 1000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor total: R$", round(vr, 2))
elif (opcao == "I") and (c <= 5000) and (c > 0):
	vr = (c * 0.55)
	print ("Valor total: R$", round(vr, 2))
elif (opcao == "I") and (c > 5000) and (c > 0):
	vr = (c * 0.60)
	print ("Valor total: R$", round(vr, 2))
else:
	print ("Dados invalidos")

	
-- EXECUTION TIME:
0.135348
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
